--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
-    "multer": "^1.4.5",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.17.2"
   }
 }
-
